# drift-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-packages.yml
bindings/node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
bindings/node/src/: api.rs  conversion.rs  error.rs  lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: api.rs  conversion.rs  error.rs  lib.rs
crates/drift-rust-core/: Cargo.toml
crates/drift-rust-core/src/: error.rs  export_request_proto.rs  hash.rs  lib.rs  normalize.rs  payload.rs  protobuf_struct.rs  schema.rs  span_proto.rs  types.rs
crates/drift-rust-core/tests/: fixture_smoke.rs
docs/: compatibility-matrix.md  design.md
scripts/: release.sh
tests/fixtures/: basic.json
tests/parity/: node_binding_smoke.mjs  python_binding_smoke.py  run_smoke.sh
