[package]
name = "drift-rust-core-node"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "Node bindings for drift-rust-core"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
drift-rust-core = { path = "../../crates/drift-rust-core" }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
serde_json = "1"
tusk-drift-schemas.workspace = true

[build-dependencies]
napi-build = "2"
