[package]
name = "drift-rust-core"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "Shared Rust core for Tusk Drift"

[dependencies]
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
tusk-drift-schemas = "0.1.30"
